Migrated to MVC Project rather than Razor pages

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Clicker-ca0d6ecd-ec29-4ff0-be36-a2809d205912;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ClickerWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ClickerWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
