--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:16955",
-      "sslPort": 44344
+      "applicationUrl": "http://localhost:15463",
+      "sslPort": 44390
     }
   },
   "profiles": {
-    "ClickerWebApp": {
+    "Clicker": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7111;http://localhost:5233",
+      "applicationUrl": "https://localhost:7256;http://localhost:5153",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
