Implemented Identity with default styling

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Clicker-ca0d6ecd-ec29-4ff0-be36-a2809d205912;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.;Initial Catalog=ClickerDB;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
